Loop searching activities

--- a/config.yaml.template
+++ b/config.yaml.template
@@ -2,6 +2,7 @@ board: 'b'
 pics_base_dir: 'pics'
 chat_id: 1337
 bot_token: 'tokentoken'
+sleep_interval: 200400
 search_tags:
   - 'засмеялся'
   - 'проиграл'
