--- a/config.yaml.template
+++ b/config.yaml.template
@@ -1,8 +1,18 @@
-board: 'b'
-chat_id: 1337
-bot_token: 'tokentoken'
-sleep_interval: 200400
-sending_interval: 1
-search_tags:
-  - 'засмеялся'
-  - 'проиграл'
+entries:
+    ylyl:
+        board: 'b'
+        chat_id: 1337
+        bot_token: 'tokentoken'
+        sleep_interval: 200400
+        sending_interval: 1
+        search_tags:
+          - 'засмеялся'
+          - 'проиграл'
+    photo:
+        board: 'p'
+        chat_id: 1337
+        bot_token: 'tokentoken'
+        sleep_interval: 200400
+        sending_interval: 1
+        search_tags:
+          - ''
